--- a/webroot/livetest.css
+++ b/webroot/livetest.css
@@ -44,16 +44,29 @@
 }
 .jsc-live-test-inner {
 	display: none;
-	height: 265px;
-	padding: 10px !important;
+	height: 200px;
 	margin-top: 1px !important;
 	overflow: auto;
 }
 .jsc-live-test-inner {
 	display: block;
 }
+.jsc-live-test-inner table {
+	border-collapse: collapse;
+}
+.jsc-live-test-inner table th {
+	width: 25px;
+	min-width: 25px;
+	background: #232526;
+	color: #425558;
+	text-align: center;
+	vertical-align: top;
+}
+.jsc-live-test-inner table td {
+	padding: 0 5px !important;
+}
 .jsc-live-test-section {
-	margin-bottom: 10px !important;
+	margin-bottom: 1em !important;
 }
 .jsc-live-test-title {
 	color: #FB9632;
@@ -62,14 +75,74 @@
 	padding-left: 20px;
 }
 .jsc-live-test-value-true {
-	color: #8ADC40;
+	color: #8ADC40 !important;
 }
 .jsc-live-test-value-false {
-	color: #F62C5E;
+	color: #F62C5E !important;
+}
+.jsc-lt-true {
+	color: #8ADC40 !important;
+}
+.jsc-lt-false {
+	color: #F62C5E !important;
 }
 
 #jsi-lt-status {
+	width: 100%;
+	background: #303030;
+	text-align: center;
+	border-collapse: collapse;
+	font-size: 11px;
+	font-weight: bold;
+}
+#jsi-lt-status td {
+	height: 14px;
+	vertical-align: middle;
 }
 #jsi-lt-status-name {
+	position: relative;
+	min-width: 60px;
+	padding: 0 7px !important;;
 	background: #FFFFFF;
+	color: #0A5F5F;
+}
+#jsi-lt-status-passing:before {
+	content: '';
+	position: absolute;
+	top: 2px;
+	left: -5px;
+	display: block;
+	width: 10px;
+	height: 10px;
+	background: #FFFFFF;
+	-webkit-transform: rotate(45deg);
+}
+#jsi-lt-status-passing {
+	position: relative;
+	min-width: 140px;
+	padding-left: 5px !important;
+	background: #1488AD;
+}
+#jsi-lt-status-last:before {
+	content: '';
+	position: absolute;
+	top: 2px;
+	left: -5px;
+	display: block;
+	width: 10px;
+	height: 10px;
+	background: #1488AD;
+	-webkit-transform: rotate(45deg);
+}
+#jsi-lt-status-last {
+	position: relative;
+	width: 100%;
+}
+#jsi-lt-specs {
+	overflow: auto;
+	padding: 5px !important;
+}
+#jsi-lt-specs a {
+	display: inline-block;
+	padding: 0 5px;
 }
