--- a/webroot/livetest.css
+++ b/webroot/livetest.css
@@ -72,7 +72,7 @@
 	color: #FB9632;
 }
 .jsc-lt-op-value {
-	padding-left: 20px;
+	padding-left: 20px !important;
 }
 .jsc-lt-value-true {
 	color: #8ADC40 !important;
